# routes/projectRoutes.js
@@ -5,14 +5,16 @@ const {
   getAllProjects,
   getProjectById,
   deleteProject,
+  updateProject
 } = require("../controllers/projectController");
 
 
-
+// /projects is already in base path
 router
   .post("/", createProject)
   .get("/", getAllProjects)
   .get("/:projectId", getProjectById)
+  .put("/:projectId", updateProject);
   .delete("/:projectId", deleteProject);
 
 module.exports = router;
